# toolchain

./: CMakeListOV.txt  CMakeLists.txt  DockerOCV  Dockerfile  DockerfileV1  DockerfileV2  entrypoint.sh  jsontest.cpp  pocotest.cpp
src/: CMakeLists.txt  TextTimer.cpp  TextTimer.hpp  app  buildwhatsinside.sh  main.cpp  off.json  on.json  shedule.json
